--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tarojs/taro-h5": "^1.0.1",
     "@tarojs/taro-weapp": "^1.0.1",
     "nervjs": "^1.3.0",
+    "react-gooey-nav": "^2.0.0",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
